# malmo-challenge

./: .gitignore  SUBMISSION_ENTRY_DESCRIPTION.md
MCTS/: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  __init__.py  astar.cpp  astar.hpp  common.hpp  libmcts.dylib  main.cpp  node.cpp  node.hpp  path_cache.cpp  path_cache.hpp  random.hpp  setup.py  strategy.cpp  strategy.hpp  uct.cpp  uct.hpp
MCTS/tsearch/: __init__.py
ai_challenge/pig_chase/: .gitignore  agent.py  bayes_agent.py  environment.py  evaluation.py  infer_pig_move.py  pig_chase.xml  pig_chase_experiment.py  plot.py  run_agents.py  test.py
pig_model/: beefy.pkl  plot.py  stone.pkl
